--- a/elements.html
+++ b/elements.html
@@ -27,8 +27,8 @@
 						<h2>Menu</h2>
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About me</a></li>
-							<li><a href="elements.html">Dev Skils</a></li>
+							<li><a href="generic.html">Projects</a></li>
+							<li><a href="elements.html">Dev Skills</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
 					</div>
@@ -40,6 +40,10 @@
 							<div class="inner">
 								<h2>Dev Skils</h2>
 								<p>Here is all the information about my technical skills in the technology field</p>
+								<span style="font-size: 2em;">
+									<a href="https://github.com/Joao-Victor-RVG" target="_blank" rel="noopener noreferrer" class="fab fa-github"><i></i> My GitHub Profile</a>
+
+								  </span>
 							</div>
 						</header>
 
@@ -107,25 +111,22 @@
 													<tr>
 														<td>English</td>
 														<td>Cambly</td>
-														<td>35</td>
+														<td>50</td>
 													</tr>
 													<tr>
 														<td>Technical English for developers</td>
 														<td>Danki Code</td>
 														<td>40</td>
 													</tr>
-													
 											</table>
 										</div>
 										<br>
 										<br>
-										
-
 									<section>
 										<h3 class="major">Certificates</h3>
 										<div class="box alt">
 											<div class="row gtr-uniform">
-												<div class="col-4"><span class="image fit"><img src="certificados/cambly.png" alt="" /></span></div>
+												<div class="col-4"><span class="image fit"><img src="certificados/cambly.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="certificados/wizard.png" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="certificados/github.png" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="certificados/html1.png" alt="" /></span></div>
