--- a/generic.html
+++ b/generic.html
@@ -27,8 +27,8 @@
 						<h2>Menu</h2>
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About me</a></li>
-							<li><a href="elements.html">Dev Skils</a></li>
+							<li><a href="generic.html">Projects</a></li>
+							<li><a href="elements.html">Dev Skills</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
 					</div>
