Feat:(Creating JSON dictionaries)

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 									<div class="content">
 										<h2 class="major">who is João Victor?</h2>
 										<p>
-											João Victor is 19 years old and since he was little he has always been passionate about technology,
-											he always impressed his teachers with his ability to be self-taught, especially in the subjects of
+											João Victor is 19 years old and since he was little he has always been 															passionate about technology,
+											he always impressed his teachers with his ability to be self-taught, especially 											in the subjects of
 											educational robotics and computer science at school.
 										</p>
 									</div>
@@ -83,7 +83,7 @@
 										<p> 
 											Feel free to check out my LinkedIn profile and learn a little more about my career as a software developer.
 										</p>
-										<a href="https://www.linkedin.com/in/jo%C3%A3o-victor-rocha-vilela-godoi-1318581ab/" target="_blank" class="special" >Visit my LinkedIn 											Profile</a>
+										<a href="https://www.linkedin.com/in/jo%C3%A3o-victor-rocha-vilela-godoi-1318581ab/" target="_blank" class="special" >Visit my LinkedIn Profile</a>
 									</div>
 								</div>
 							</section>
@@ -91,12 +91,12 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">places I've visited</h2>
+									<h2 class="major">Places I've visited</h2>
 									<p>I've always enjoyed discovering new places and traveling is the ideal tool for that.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="img travel/quitandinha.JPEG" alt="quitandinha museum" /></a>
-											<h3 class="major">quitandinha museum</h3>
+											<h3 class="major">Quitandinha museum</h3>
 											<p> Considered one of the main postcards of the state of Rio de Janeiro, Palácio Quitandinha was opened in 1944 to be the largest casino-hotel in
 												Latin America. The space refers to the neo-Norman style, a trend in the great European casinos of the time, being decorated with inspiration from Hollywood scenarios.
 											</p>
@@ -104,7 +104,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="img travel/arrail.jpeg" alt="arraial" /></a>
-											<h3 class="major">arraial do cabo-RJ</h3>
+											<h3 class="major">Arraial do cabo-RJ</h3>
 											<p> Arraial do Cabo, in the Lagos Region of Rio de Janeiro, is one of the most spectacular destinations
 												in Brazil. With easy access, low prices, sunny days and stunning beaches, Arraial is an excellent
 												choice for those who want to enjoy a good rest.
